# YoloV8Seg-TensorRT

./: .gitignore  CMakeLists.txt
cmake/: FindTensorRT.cmake
include/: yolov8seg.h
src/: testCuda.cpp  yoloTest.py  yolov8seg.cpp  yolov8seg.cu
